# go-bazel-starter

./: .bazelrc  .gitignore  .gitlab-ci.yml  BUILD.bazel  MODULE.bazel  Makefile  README.md  go.mod
.github/workflows/: ci.yaml
cmd/tool/: BUILD.bazel  main.go
pkg/cache/: BUILD.bazel  redis.go  redis_test.go
pkg/httpx/: BUILD.bazel  client.go  client_test.go
pkg/retry/: BUILD.bazel  retry.go  retry_test.go
