bazel_dep(name = "rules_go", version = "0.50.1")
bazel_dep(name = "gazelle", version = "0.38.0")
bazel_dep(name = "rules_oci", version = "2.0.0")
bazel_dep(name = "buildifier_prebuilt", version = "7.3.1")

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.22.6")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.module(
    path = "github.com/stretchr/testify",
    sum = "h1:Xv5erBjTwe/5IxqUQTdXv5kgmIvbHo3QQyRwhJsOfJA=",
    version = "v1.10.0",
)
go_deps.module(
    path = "github.com/davecgh/go-spew",
    sum = "h1:vj9j/u1bqnvCEfJOwUhtlOARqs3+rkHYY13jYWTU97c=",
    version = "v1.1.1",
)
go_deps.module(
    path = "github.com/pmezard/go-difflib",
    sum = "h1:4DBwDE0NGyQoBHbLQYPwSUPoCMWR5BEzIk/f1lZbAQM=",
    version = "v1.0.0",
)
go_deps.module(
    path = "gopkg.in/yaml.v3",
    sum = "h1:fxVm/GzAzEWqLHuvctI91KS9hhNmmWOoWu0XTYJS7CA=",
    version = "v3.0.1",
)
go_deps.module(
    path = "github.com/redis/go-redis/v9",
    sum = "h1:k5iquqv27aBtnTm2tIkROUDp8JBXhXZIVu1InSgvovg=",
    version = "v9.12.1",
)
go_deps.module(
    path = "github.com/cespare/xxhash/v2",
    sum = "h1:UL815xU9SqsFlibzuggzjXhog7bL6oX9BbNZnL2UFvs=",
    version = "v2.3.0",
)
go_deps.module(
    path = "github.com/dgryski/go-rendezvous",
    sum = "h1:lO4WD4F/rVNCu3HqELle0jiPLLBs70cWOduZpkS1E78=",
    version = "v0.0.0-20200823014737-9f7001d12a5f",
)
go_deps.module(
    path = "github.com/bsm/ginkgo/v2",
    sum = "h1:4HvOPQ+QK0Q4Hp5Hcb3dBKMVrJ83bJzOfj4xqhd+nuI=",
    version = "v2.12.0",
)
go_deps.module(
    path = "github.com/bsm/gomega",
    sum = "h1:4ieA6uqQrRR0ur5+I+n2dmm6Go3t6sF3zEKfSfc6tbU=",
    version = "v1.27.10",
)
use_repo(go_deps, "com_github_cespare_xxhash_v2", "com_github_davecgh_go_spew", "com_github_dgryski_go_rendezvous", "com_github_pmezard_go_difflib", "com_github_redis_go_redis_v9", "com_github_stretchr_testify", "in_gopkg_yaml_v3", "com_github_bsm_ginkgo_v2", "com_github_bsm_gomega")

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "distroless_base",
    digest = "sha256:ccaef5ee2f1850270d453fdf700a19e2f3586b65a7891cba7403986905ba1fa9",
    image = "gcr.io/distroless/base",
    platforms = ["linux/amd64"],
)
use_repo(oci, "distroless_base", "distroless_base_linux_amd64")
