load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "retry",
    srcs = ["retry.go"],
    importpath = "github.com/robertarktes/go-bazel-starter/pkg/retry",
    visibility = ["//visibility:public"],
)

go_test(
    name = "retry_test",
    srcs = ["retry_test.go"],
    deps = [
        ":retry",
        "@com_github_stretchr_testify//assert",
    ],
)
